--- a/Assets/UI/Button.uss
+++ b/Assets/UI/Button.uss
@@ -4,4 +4,6 @@
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
+    font-size: 12px;
+    -unity-font-style: bold;
 }
