--- a/Assets/UI/MainUI.uxml
+++ b/Assets/UI/MainUI.uxml
@@ -1,9 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Button.uss?fileID=7433441132597879392&amp;guid=221373136948cb14596d14ab4d9b8429&amp;type=3#Button" />
     <ui:VisualElement picking-mode="Ignore" style="flex-grow: 1;">
-        <ui:VisualElement name="Container" picking-mode="Ignore" style="flex-grow: 1; width: 177px; padding-top: 10%; padding-bottom: 10%; padding-right: 2%; padding-left: 2%; background-color: rgba(24, 24, 24, 0);">
+        <ui:VisualElement name="Container" picking-mode="Ignore" style="flex-grow: 1; width: 177px; padding-top: 10%; padding-bottom: 10%; padding-right: 1%; padding-left: 1%; background-color: rgba(24, 24, 24, 0); max-width: 15%;">
             <ui:Button text="Start battle" parse-escape-sequences="true" display-tooltip-when-elided="true" name="button-start" class="button" />
-            <ui:Button text="Team toggle" parse-escape-sequences="true" display-tooltip-when-elided="true" name="button-team" class="button" style="white-space: normal;" />
+            <ui:Button text="Team" parse-escape-sequences="true" display-tooltip-when-elided="true" name="button-team" class="button" style="white-space: normal;" />
         </ui:VisualElement>
         <ui:VisualElement name="Shop" style="flex-grow: 1; align-self: stretch;" />
     </ui:VisualElement>
