--- a/Assets/UI/Button.uss
+++ b/Assets/UI/Button.uss
@@ -4,6 +4,6 @@
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
-    font-size: 12px;
+    font-size: 100%;
     -unity-font-style: bold;
 }
