--- a/Assets/UI/MainUI.uxml
+++ b/Assets/UI/MainUI.uxml
@@ -7,7 +7,7 @@
                 <ui:Button text="Team A" parse-escape-sequences="true" display-tooltip-when-elided="true" name="button-team" class="button" style="white-space: normal; width: 120px; height: 30px;" />
             </ui:VisualElement>
             <ui:VisualElement name="unit-shop" style="flex-grow: 1; flex-direction: row;">
-                <ui:Button text="Basic" parse-escape-sequences="true" display-tooltip-when-elided="true" class="button" style="height: auto; background-image: url(&quot;project://database/Assets/UI/basic.jpg?fileID=2800000&amp;guid=7f1a07c4dca6c9ed2baccaa23a0041c7&amp;type=3#basic&quot;); -unity-background-scale-mode: scale-and-crop;" />
+                <ui:Button text="Melee" parse-escape-sequences="true" display-tooltip-when-elided="true" class="button" style="height: auto; background-image: url(&quot;project://database/Assets/UI/basic.jpg?fileID=2800000&amp;guid=7f1a07c4dca6c9ed2baccaa23a0041c7&amp;type=3#basic&quot;); -unity-background-scale-mode: scale-and-crop;" />
                 <ui:Button text="Archer" parse-escape-sequences="true" display-tooltip-when-elided="true" class="button" style="height: auto; background-image: url(&quot;project://database/Assets/UI/archer.jpg?fileID=2800000&amp;guid=6007769080cfe956397eaf3256905ae7&amp;type=3#archer&quot;); -unity-background-scale-mode: scale-and-crop; -unity-background-image-tint-color: rgb(255, 255, 255);" />
                 <ui:Button text="Mage" parse-escape-sequences="true" display-tooltip-when-elided="true" class="button" style="height: auto; background-image: url(&quot;project://database/Assets/UI/mage.jpg?fileID=2800000&amp;guid=fc962a5b4b7b558869500e4c1741d281&amp;type=3#mage&quot;); -unity-background-scale-mode: scale-and-crop;" />
             </ui:VisualElement>
